--- a/src/main/resources/templates/seedstartermng.html
+++ b/src/main/resources/templates/seedstartermng.html
@@ -6,6 +6,9 @@
     <title>Spring Thyme Seed Starter Manager</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" media="all" href="../../css/stsm.css" th:href="@{/css/stsm.css}"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/style.css" th:href="@{/css/style.css}"/>
+
   </head>
 
   <body>
@@ -15,11 +18,11 @@
            th:src="@{/images/stsmlogo.png}" th:alt-title="#{title.application}"/>
     </div>
     
-    <div class="seedstarterlist" th:unless="${#lists.isEmpty(allSeedStarters)}">
+    <div class="bg-light rounded h-100 p-4" th:unless="${#lists.isEmpty(allSeedStarters)}">
     
-      <h2 th:text="#{title.list}">List of Seed Starters</h2>
+      <h2 class="display-6" th:text="#{title.list}">List of Seed Starters</h2>
       
-      <table>
+      <table class="table table-responsive">
         <thead>
           <tr>
             <th th:text="#{seedstarter.datePlanted}">Date Planted</th>
@@ -39,7 +42,7 @@
                                #strings.arrayPrepend(sb.features,'seedstarter.feature.')),
                              ', ')}">Electric Heating, Turf</td>
             <td>
-              <table>
+              <table class="table table-responsive">
                 <tbody>
                   <tr th:each="row,rowStat : ${sb.rows}">
                     <td th:text="${rowStat.count}">1</td>
@@ -56,13 +59,13 @@
     </div>
 
 
-    <div>
+    <div class="bg-light rounded h-100 p-4">
     
-      <h2 th:text="#{title.new}">Add new Seed Starter</h2>
+      <h2 class="display-6" th:text="#{title.new}">Add new Seed Starter</h2>
 
       <form action="#" th:action="@{/seedstartermng}" th:object="${seedStarter}" method="post">
     
-        <fieldset>
+        <div class="bg-light text-center rounded p-4">
           
           <legend th:text="#{seedstarter.data}">Seed Starter Data</legend>
 
@@ -70,17 +73,17 @@
             <li th:each="err : ${#fields.errors('*')}" th:text="${err}">Input is incorrect</li>
           </ul>
 
-          
-          <div>
+          <div style="padding-left: 200px;padding-right: 200px;border-radius: 5px !important;text-align:center;background-color: #7bcf1d6e;">
+          <div >
             <label for="datePlanted">
               <span th:text="#{seedstarter.datePlanted}">Date planted</span>
               (<span th:text="#{date.format}">YYYY/MM/DD</span>)
             </label>
             <input type="text" th:field="*{datePlanted}" th:errorclass="fieldError" />
           </div>
-          <div>
-            <label th:for="${#ids.next('covered')}" th:text="#{seedstarter.covered}">Covered</label>
-            <input type="checkbox" th:field="*{covered}" />
+          <div class="form-check" style="text-align:center">
+            <label class="form-check-label" th:for="${#ids.next('covered')}" th:text="#{seedstarter.covered}">Covered</label>
+            <input class="form-check-input" type="checkbox" th:field="*{covered}" />
           </div>
           <div>
             <label for="type" th:text="#{seedstarter.type}">Type</label>
@@ -88,12 +91,13 @@
               <option th:each="type : ${allTypes}" th:value="${type}" th:text="#{${'seedstarter.type.' + type}}">Wireframe</option>
             </select>
           </div>
-          <div>
-            <label th:text="#{seedstarter.features}">Features</label>
-            <ul>
+          </div>
+          <div class="bg-light rounded h-100 p-4">
+            <label  th:text="#{seedstarter.features}">Features</label>
+            <ul class="btn-group">
               <li th:each="feat : ${session.allFeatures}">
                 <input type="checkbox" th:field="*{features}" th:value="${feat}" />
-                <label th:for="${#ids.prev('features')}" th:text="#{${'seedstarter.feature.' + feat}}">Electric Heating</label>
+                <label class="btn btn-outline-primary" th:for="${#ids.prev('features')}" th:text="#{${'seedstarter.feature.' + feat}}">Electric Heating</label>
               </li>
               <li th:remove="all">
                 <input id="removed1" type="checkbox" /> <label for="removed1">Turf</label>
@@ -102,15 +106,15 @@
           </div>
     
           <div>
-            <label th:text="#{seedstarter.rows}">Rows</label>
-            <table>
+            <h3 class="display-6" th:text="#{seedstarter.rows}">Rows</h3>
+            <table class="table table-responsive">
               <thead>
                 <tr>
                   <th th:text="#{seedstarter.rows.head.rownum}">Row</th>
                   <th th:text="#{seedstarter.rows.head.variety}">Variety</th>
                   <th th:text="#{seedstarter.rows.head.seedsPerCell}">Seeds per cell</th>
                   <th>
-                    <button type="submit" name="addRow" th:text="#{seedstarter.row.add}">Add row</button>
+                    <button class="btn btn-primary rounded-pill m-2" type="submit" name="addRow" th:text="#{seedstarter.row.add}">Add row</button>
                   </th>
                 </tr>
               </thead>
@@ -126,7 +130,7 @@
                     <input type="text" th:field="*{rows[__${rowStat.index}__].seedsPerCell}" th:errorclass="fieldError" />
                   </td>
                   <td>
-                    <button type="submit" name="removeRow" th:value="${rowStat.index}" th:text="#{seedstarter.row.remove}">Remove row</button>
+                    <button class="btn btn-primary rounded-pill m-2" type="submit" name="removeRow" th:value="${rowStat.index}" th:text="#{seedstarter.row.remove}">Remove row</button>
                   </td>
                 </tr>
               </tbody>
@@ -134,10 +138,10 @@
           </div>
     
           <div class="submit">
-            <button type="submit" name="save" th:text="#{seedstarter.create}">Add Seed Starter</button>    
+            <button class="btn btn-lg btn-primary m-2" type="submit" name="save" th:text="#{seedstarter.create}">Add Seed Starter</button>
           </div>
         
-        </fieldset>
+        </div>
           
       </form>
         
