--- a/src/main/resources/templates/seedstartermng.html
+++ b/src/main/resources/templates/seedstartermng.html
@@ -24,7 +24,7 @@
       
       <table class="table table-responsive">
         <thead>
-          <tr>
+          <tr style="background-color:#80c510">
             <th th:text="#{seedstarter.datePlanted}">Date Planted</th>
             <th th:text="#{seedstarter.covered}">Covered</th>
             <th th:text="#{seedstarter.type}">Type</th>
@@ -138,7 +138,7 @@
           </div>
     
           <div class="submit">
-            <button class="btn btn-lg btn-primary m-2" type="submit" name="save" th:text="#{seedstarter.create}">Add Seed Starter</button>
+            <button class="btn btn-primary w-100 m-2" type="submit" name="save" th:text="#{seedstarter.create}">Add Seed Starter</button>
           </div>
         
         </div>
